syntax = "proto3";
package dozer.cloud;

message File {
  string name = 1;
  string content = 2;
}

message LogMessage {
  string message = 1;
  string from = 2;
}

message StatusUpdate {
  string source = 1;
  string type = 2;
  uint64 count = 3;
}