
syntax = "proto3";

package dozer.internal;
import "types.proto";

service InternalPipelineService {
  rpc StreamOperations(OperationsRequest) returns (stream dozer.types.Operation);
  rpc StreamAliasEvents(AliasEventsRequest) returns (stream AliasRedirected);
}

// ---------------- Api ------------------------
message OperationsRequest {}

message AliasEventsRequest {}

message AliasRedirected {
  string real_name = 1;
  string alias = 2;
}
